# VTKExamples

./: CMakeLists.txt
forms/: mainwindow.ui
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
